<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="320dp"
    android:background="#95FFFFFF"
    tools:context=".Profile/ProfileFragment">
    <ScrollView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <!-- NEED TO ADD IN THE PHOTO STUFF HERE! -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/profileLayout">
                <TextView android:text="@string/ProfilePhoto"
                    android:id="@+id/textViewProfilePhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#00a5f6"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"/>

                <ImageView
                    android:id="@+id/imageViewProfilePhoto"
                    android:src="@drawable/ic_home"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_below="@+id/textViewProfilePhoto"
                    android:layout_alignParentLeft="true"
                    android:maxHeight="100dp"
                    android:maxWidth="100dp"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/ProfilePhoto"
                    android:minHeight="40dp"
                    android:minWidth="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignWithParentIfMissing="false" />

                <Button
                    android:id="@+id/buttonChangePhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="45dp"
                    android:layout_marginRight="10dp"
                    android:padding="10dp"
                    android:layout_alignParentRight="true"
                    android:textColor="#FFF"
                    android:background="#00a5f6"
                    android:text="@string/buttonChangePhoto"
                    android:onClick="setNewPicture" />
            </RelativeLayout>

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewName"
                android:layout_alignParentLeft="true"
                android:inputType="textCapWords"
                android:hint="@string/NameHint"
                />

            <RadioGroup
                android:id="@+id/mFRadio"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/textViewGender"
                android:layout_alignParentLeft="true"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/maleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#00a5f6"
                    android:text="@string/Male"
                    />

                <RadioButton
                    android:id="@+id/femaleRadio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="#00a5f6"
                    android:text="@string/Female"
                    android:layout_gravity="right|end"
                    android:checked="false" />

            </RadioGroup>
        </LinearLayout>
    </ScrollView>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:gravity="center|bottom"
        android:src="@drawable/dual_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center|bottom"
        android:layout_alignParentBottom="true"
        >
        <Button
            android:id="@+id/button_profile_save"
            android:layout_width="0dp"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:textColor="#00a5f6"
            android:background="#00000000"
            android:text="@string/SaveButton"
            android:onClick="onSaveClicked"
            />

        <Button
            android:id="@+id/button_profile_cancel"
            android:layout_width="0dp"
            android:layout_height="50dip"
            android:layout_weight="1"
            android:textColor="#00a5f6"
            android:background="#00000000"
            android:text="@string/CancelButton"
            android:onClick="onCancelClicked"
            />
    </LinearLayout>
</RelativeLayout>